test fixed after merge conflicts